--- a/epoxy.toml
+++ b/epoxy.toml
@@ -2,8 +2,8 @@
 bind = ["tcp", "localhost:1338"]
 
 [stream]
-allow_hosts = ["^(?:.*\\.)?itch\\.io$", "^(?:.*\\.)?itch\\.zone$", "^(?:.*\\.)?ytimg\\.com$", "^(?:.*\\.)?googletagmanager\\.com$", "^(?:.*\\.)?publicsuffix\\.org$", "^(?:.*\\.)?gstatic\\.com$", "^(?:.*\\.)?google\\.com$", "^(?:.*\\.)?googleapis\\.com$"]
-block_hosts = [".*"]
+allow_hosts = ["^.*$"]
+block_hosts = []
 allow_direct_ip = false
 allow_loopback = false
 allow_udp = false
